styles.css
@font-face {
    font-family: calculator;
    src: url(digital-7.ttf);
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.calc-container {
    font-family: calculator;
    background-color: #50595f;
    border-radius: 7px;
    width: 350px;
    height: 410px;
    margin-top: 50px;
    padding: 10px;
}

.display {
    text-align: right;
    background-color: #6eb96e;
    width: 350px;
    height: 50px;
    border-radius: 7px;
    font-size: 45px;
}

.options {
    display: flex;
    justify-content: space-around;
    padding-top: 7px;
    padding-bottom: 7px;
    gap: 5px;
}

.clear,
.delete {
    background-color: rgb(206, 87, 87);
    border-radius: 7px;
    width: 200px;
    height: 50px;
}

.clear:hover,
.delete:hover {
    background-color: rgb(207, 70, 70);
}

.clear:active,
.delete:active {
    background-color: rgb(202, 53, 53);
}

.keys {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
}

button {
    background-color: #3a4146;
    border: 0px solid;
    color: white;
    font-family: calculator;
    font-size: 25px;
    border-radius: 30px;
    width: 82.5px;
    height: 70px;
}

button:hover {
    background-color: rgb(63, 71, 77);
    transform: scale(1.03);
}

button:active {
    background-color: rgb(69, 75, 80);
}

.calculate {
    background-color: #94a1aa;
}

.calculate:hover {
    background-color: rgb(127, 140, 148);
}

.calculate:active {
    background-color: rgb(116, 129, 138);
}

